--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -131,6 +131,9 @@
             "positiveAspectsTitle": "Positive Aspekte",
             "positiveAspectsDescription": "Was Sie von Ihrem Therapeuten erwarten",
             "notFound": "Nicht gefunden.",
+              "oops": "Oops!",
+
+              "noTagsFoundErrorDescription": "Wir konnten keine Ergebnisse für Ihre Anfrage finden. Bitte versuchen Sie eine andere Anfrage oder versuchen Sie, sie länger zu machen.",
             "ohNoSomethingWentWrong": "Oh nein, etwas ist schief gelaufen!",
           "candidateBlockedDueToSafetyMessage": "Es wurde unangemessene Sprache in Ihrer Anfrage erkannt und wir konnten sie nicht verarbeiten. Bitte versuchen Sie es erneut. Wenn Sie glauben, dass dies ein Fehler ist, kontaktieren Sie uns bitte.",
           "noCandidatesMessage": "Es gab einen Fehler beim Versuch, Ihre Anfrage zu verarbeiten. Wir haben das Problem gemeldet. Bitte versuchen Sie es später erneut.",
