Everything works, except for locales

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -152,5 +152,43 @@
             "remote": "Remote",
             "presential": "Präsent",
             "meetingType": "Treffen",
-            "allTherapists": "Alle Therapeuten"
+            "allTherapists": "Alle Therapeuten",
+
+             "yourTherapistProfile": "Dein Therapeutenprofil",
+              "personalInfo": "Persönliche Informationen",
+              "aboutMe": "Über mich",
+              "firstName": "Vorname",
+              "pleaseEnterYourFullName": "Bitte gib deinen vollständigen Namen ein",
+              "lastName": "Nachname",
+              "birthday": "Geburtstag",
+              "pleaseEnterYourBirthday": "Bitte gib dein Geburtsdatum ein",
+              "email": "E-Mail",
+              "pleaseEnterYourEmail": "Bitte gib deine E-Mail-Adresse ein",
+              "phone": "Telefon",
+              "pleaseEnterYourPhoneNumber": "Bitte gib deine Telefonnummer ein",
+              "address": "Adresse",
+              "city": "Stadt",
+              "country": "Land",
+              "stateProvince": "Bundesland/Kanton",
+              "zipCode": "Postleitzahl",
+              "addSpecializations": "Spezialisierung(en) hinzufügen",
+              "addSpokenLanguages": "Gesprochene Sprache(n) hinzufügen",
+              "presential": "Präsenz",
+              "remote": "Fern",
+              "intro": "Einführung",
+              "pleaseEnterYourIntro": "Bitte gib deine Einführung ein",
+              "publicPresentation": "Öffentliche Präsentation",
+              "pleaseEnterYourPublicPresentation": "Bitte gib deine öffentliche Präsentation ein",
+              "privateNotes": "Private Notizen",
+              "saveChanges": "Änderungen speichern",
+              "savingChanges": "Änderungen werden gespeichert...",
+              "profileSaved": "Profil gespeichert!",
+              "profileSavedMessage": "Dein Profil wurde erfolgreich aktualisiert.",
+              "errorUploadingImage": "Fehler beim Hochladen des Bildes",
+              "imageUploaded": "Bild hochgeladen",
+              "yourProfile": "Dein Profil",
+              "uploadingImage": "Bild wird hochgeladen...",
+              "errorUpdatingProfile": "Fehler beim Aktualisieren des Profils",
+              "profileUpdatedSuccessfully": "Profil erfolgreich aktualisiert",
+              "settings": "Einstellungen"
 }
