--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -153,7 +153,46 @@
                      "remote": "Remote",
                      "presential": "Presential",
                      "meetingType": "Meeting type",
-                     "allTherapists": "All therapists"
+                     "allTherapists": "All therapists",
+
+
+            "yourTherapistProfile": "Your Therapist Profile",
+             "personalInfo": "Personal Info",
+             "aboutMe": "About me",
+             "firstName": "First Name",
+             "pleaseEnterYourFullName": "Please enter your full name",
+             "lastName": "Last Name",
+             "birthday": "Birthday",
+             "pleaseEnterYourBirthday": "Please enter your birthday",
+             "email": "Email",
+             "pleaseEnterYourEmail": "Please enter your email",
+             "phone": "Phone",
+             "pleaseEnterYourPhoneNumber": "Please enter your phone number",
+             "address": "Address",
+             "city": "City",
+             "country": "Country",
+             "stateProvince": "State/Province",
+             "zipCode": "Zip Code",
+             "addSpecializations": "Add Specialization/s",
+             "addSpokenLanguages": "Add Spoken Language/s",
+             "presential": "Presential",
+             "remote": "Remote",
+             "intro": "Intro",
+             "pleaseEnterYourIntro": "Please enter your intro",
+             "publicPresentation": "Public Presentation",
+             "pleaseEnterYourPublicPresentation": "Please enter your public presentation",
+             "privateNotes": "Private Notes",
+             "saveChanges": "Save Changes",
+             "savingChanges": "Saving Changes...",
+             "profileSaved": "Profile saved!",
+             "profileSavedMessage": "Your profile has been successfully updated.",
+             "errorUploadingImage": "Error uploading image",
+             "imageUploaded": "Image uploaded",
+             "yourProfile": "Your profile",
+             "uploadingImage": "Uploading image...",
+             "errorUpdatingProfile": "Error updating profile",
+             "profileUpdatedSuccessfully": "Profile updated successfully",
+             "settings": "Settings"
 
 
 
