--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -157,7 +157,44 @@
        "remote": "Remoto",
        "presential": "Presencial",
        "meetingType": "Modalidad de Encuentro",
-       "allTherapists": "Todos los terapeutas"
+       "allTherapists": "Todos los terapeutas",
+        "yourTherapistProfile": "Tu Perfil de Terapeuta",
+         "personalInfo": "Información Personal",
+         "aboutMe": "Sobre mí",
+         "firstName": "Nombre",
+         "pleaseEnterYourFullName": "Por favor, ingresa tu nombre completo",
+         "lastName": "Apellido",
+         "birthday": "Fecha de Nacimiento",
+         "pleaseEnterYourBirthday": "Por favor, ingresa tu fecha de nacimiento",
+         "email": "Correo Electrónico",
+         "pleaseEnterYourEmail": "Por favor, ingresa tu correo electrónico",
+         "phone": "Teléfono",
+         "pleaseEnterYourPhoneNumber": "Por favor, ingresa tu número de teléfono",
+         "address": "Dirección",
+         "city": "Ciudad",
+         "country": "País",
+         "stateProvince": "Estado/Provincia",
+         "zipCode": "Código Postal",
+         "addSpecializations": "Agregar Especialización/es",
+         "addSpokenLanguages": "Agregar Idioma/s Hablado/s",
+         "presential": "Presencial",
+         "remote": "Remoto",
+         "intro": "Introducción",
+         "pleaseEnterYourIntro": "Por favor, ingresa tu introducción",
+         "publicPresentation": "Presentación Pública",
+         "pleaseEnterYourPublicPresentation": "Por favor, ingresa tu presentación pública",
+         "privateNotes": "Notas Privadas",
+         "saveChanges": "Guardar Cambios",
+         "savingChanges": "Guardando Cambios...",
+         "profileSaved": "¡Perfil guardado!",
+         "profileSavedMessage": "Tu perfil ha sido actualizado exitosamente.",
+         "errorUploadingImage": "Error al subir la imagen",
+         "imageUploaded": "Imagen subida",
+         "yourProfile": "Tu perfil",
+         "uploadingImage": "Subiendo imagen...",
+         "errorUpdatingProfile": "Error al actualizar el perfil",
+         "profileUpdatedSuccessfully": "Perfil actualizado exitosamente",
+         "settings": "Configuración"
 
 
 
