--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -96,6 +96,8 @@
 
           "welcomeScreenSubtitleDescription": "Tu asistente AI que te ayuda a encontrar el terapeuta adecuado para ti y tus necesidades específicas - ¡en cualquier parte del mundo!",
           "registerAsTherapistButton": "Registrarse como terapeuta",
+          "goToMyTherapistProfileButton": "Ir a mi perfil de terapeuta",
+
           "welcomeToPrefix": "Bienvenido a ",
           "aspectsDetectedByAi": "Aspectos detectados por la IA:",
            "findingMatches": "Buscando coincidencias...",
@@ -148,7 +150,7 @@
     "generativeAiErrorMessage": "Ocurrió un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
     "unknownErrorMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
     "languages": "Idiomas",
-   "therapistAboutMe": "Sobre mí",
+   "therapistAboutMe": "Acerca de mí",
     "score": "Valoración",
     "professionalCertificates": "Certificados",
       "messageMeButton": "Envíame un mensaje",
@@ -158,15 +160,18 @@
        "presential": "Presencial",
        "meetingType": "Modalidad de Encuentro",
        "allTherapists": "Todos los terapeutas",
-        "yourTherapistProfile": "Tu Perfil de Terapeuta",
-         "personalInfo": "Información Personal",
+       "imageUploadedSuccessfully": "Imagen subida exitosamente.",
+        "errorSavingProfile": "Error al guardar el perfil",
+          "errorSavingProfileMessage": "Hubo un error al guardar tu perfil. Por favor, inténtalo de nuevo más tarde.",
+        "yourTherapistProfile": "Tu perfil de terapeuta",
+         "personalInfo": "Datos personales",
          "aboutMe": "Sobre mí",
          "firstName": "Nombre",
          "pleaseEnterYourFullName": "Por favor, ingresa tu nombre completo",
          "lastName": "Apellido",
-         "birthday": "Fecha de Nacimiento",
+         "birthday": "Fecha de nacimiento",
          "pleaseEnterYourBirthday": "Por favor, ingresa tu fecha de nacimiento",
-         "email": "Correo Electrónico",
+         "email": "E-Mail",
          "pleaseEnterYourEmail": "Por favor, ingresa tu correo electrónico",
          "phone": "Teléfono",
          "pleaseEnterYourPhoneNumber": "Por favor, ingresa tu número de teléfono",
@@ -174,18 +179,18 @@
          "city": "Ciudad",
          "country": "País",
          "stateProvince": "Estado/Provincia",
-         "zipCode": "Código Postal",
-         "addSpecializations": "Agregar Especialización/es",
-         "addSpokenLanguages": "Agregar Idioma/s Hablado/s",
+         "zipCode": "Código postal",
+         "addSpecializations": "Agregar especialización/es",
+         "addSpokenLanguages": "Agregar idioma/s hablado/s",
          "presential": "Presencial",
          "remote": "Remoto",
          "intro": "Introducción",
          "pleaseEnterYourIntro": "Por favor, ingresa tu introducción",
-         "publicPresentation": "Presentación Pública",
+         "publicPresentation": "Presentación pública",
          "pleaseEnterYourPublicPresentation": "Por favor, ingresa tu presentación pública",
-         "privateNotes": "Notas Privadas",
-         "saveChanges": "Guardar Cambios",
-         "savingChanges": "Guardando Cambios...",
+         "privateNotes": "Notas privadas",
+         "saveChanges": "Guardar cambios",
+         "savingChanges": "Guardando gambios...",
          "profileSaved": "¡Perfil guardado!",
          "profileSavedMessage": "Tu perfil ha sido actualizado exitosamente.",
          "errorUploadingImage": "Error al subir la imagen",
@@ -194,7 +199,8 @@
          "uploadingImage": "Subiendo imagen...",
          "errorUpdatingProfile": "Error al actualizar el perfil",
          "profileUpdatedSuccessfully": "Perfil actualizado exitosamente",
-         "settings": "Configuración"
+         "settings": "Configuración",
+         "loading": "Cargando..."
 
 
 
