Booking screen added

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -151,6 +151,7 @@
              "score": "Bewertung",
            "professionalCertificates": "Berufszertifikate",
            "messageMeButton": "Nachricht senden",
+             "bookAMeeting": "Treffen buchen",
             "settingsScreenTitle": "Einstellungen",
             "changeLanguageButton": "Sprache ändern",
             "remote": "Remote",
