--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -149,6 +149,7 @@
                 "score": "Score",
                 "professionalCertificates": "Professional Certificates",
                    "messageMeButton": "Message me",
+                      "bookAMeeting": "Book a meeting",
                     "settingsScreenTitle": "Settings",
                      "changeLanguageButton": "Change language",
                      "remote": "Remote",
