--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -154,6 +154,7 @@
     "score": "Valoración",
     "professionalCertificates": "Certificados",
       "messageMeButton": "Envíame un mensaje",
+        "bookAMeeting": "Reservar una cita",
       "settingsScreenTitle": "Configuraciones",
        "changeLanguageButton": "Cambiar Idioma",
        "remote": "Remoto",
