--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -145,6 +145,7 @@
   "score": "Évaluation",
   "professionalCertificates": "Certificats",
   "messageMeButton": "Envoyez-moi un message",
+  "bookAMeeting": "Réserver une rencontre",
   "settingsScreenTitle": "Paramètres",
   "changeLanguageButton": "Changer de langue",
   "remote": "À distance",
