--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -100,7 +100,7 @@
   "matchedTherapists": "Thérapeutes correspondants :",
   "userProfile": "Profil utilisateur",
   "therapistProfile": "Profil du thérapeute",
-  "yourRequest": "Votre demande",
+  "yourRequest": "Recherche d'un thérapeute",
   "theRequestInputShouldNotBeEmpty": "Le champ de texte de la demande ne doit pas être vide.",
   "tellUsWhatYouAreLookingFor": "Dites-nous ce que vous recherchez (Décrivez les problèmes que vous rencontrez et vos préférences en détail) :",
   "requestTextFieldHintText": "Écrivez votre demande ici - Fournissez autant d'informations que possible sur vos besoins, vos défis et ce que vous recherchez chez un thérapeute. \n\npar exemple : \nBonjour, je suis une personne de 32 ans à la recherche d'un thérapeute qui puisse comprendre mes expériences et offrir une thérapie culturellement sensible. J'ai eu des difficultés avec l'anxiété, la faible estime de soi et il m'a été difficile de socialiser récemment. J'ai besoin de quelqu'un spécialisé en thérapie cognitivo-comportementale, avec une connaissance de l'astrologie en plus. Je préférerais un thérapeute de couleur et...",
